--- a/style.css
+++ b/style.css
@@ -14,27 +14,6 @@ html, body{
 .nav-link{
   font-size: 0.9 em !important;
 }
-.carousel-inner img {
-  width: 100%;
-  height: 100%;
-
-}
-.carousel-caption {
-  position: absolute;
-  top: 55%;
-  transform: translateY(-50%);
-}
-.carousel-caption h1 {
-  font-size: 500%;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 10px #000;
-}
-
-.carousel-caption h3 {
-  font-size: 200%;
-  font-weight: 500;
-  text-shadow: 1px 1px 10px #000;
-}
 
 .padding {
   padding-bottom: 2rem;
@@ -157,34 +136,7 @@ section{
   align-items: center;
   justify-content: center;
   /*for status*/
-  flex-direction: column;
-}
-.container{
-  width: 90%;
-  max-width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  box-shadow: 0px 0px 20px #c0b3b310;
-  background-color: white;
-  border-radius: 8px;
-  margin-bottom: 20px;
-}
-
-.form-group{
-  width: 100%;
-  margin-top: 20px;
-  font-size: 20px;
-}
-
-.form-group input,
-.form-group textarea{
-  width: 100%;
-  padding: 5px;
-  font-size: 18px;
-  border: 1px solid (128, 128,128,0.199); 
-  /*margin between label and input*/
-  margin-top: 5px;
-}
+  flex-direction: column;}
 
 button[type="submit"]{
   width: 100%;
