--- a/style.css
+++ b/style.css
@@ -138,6 +138,33 @@ section{
   /*for status*/
   flex-direction: column;}
 
+  .container{
+    width: 90%;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+    box-shadow: 0px 0px 20px #c0b3b310;
+    background-color: white;
+    border-radius: 8px;
+    margin-bottom: 20px;
+  }
+  
+  .form-group{
+    width: 100%;
+    margin-top: 20px;
+    font-size: 20px;
+  }
+  
+  .form-group input,
+  .form-group textarea{
+    width: 100%;
+    padding: 5px;
+    font-size: 18px;
+    border: 1px solid (128, 128,128,0.199); 
+    /*margin between label and input*/
+    margin-top: 5px;
+  }
+
 button[type="submit"]{
   width: 100%;
   border: none;
