--- a/style.css
+++ b/style.css
@@ -160,7 +160,10 @@ button[type="submit"]{
 button[type="submit"]:hover{
   background-color:	#000080;
 }
-
+#map {
+  width: 100%;
+  height: 100%;
+}
 #status{
   width: 90%;
   max-width: 500px;
